--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "firebase": "^8.10.0",
+    "vue": "^2.6.14",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +21,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^9.25.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
